patched x-overflow interference with menu by fixing position of footer

--- a/customer.css
+++ b/customer.css
@@ -33,7 +33,6 @@
     border: 0;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
     font-family: SFRegular, Helvetica;
 }
 
@@ -60,7 +59,7 @@ body{
   .logonav h3 {
     font-family: SFBold;
     padding-left: 5%;
-    font-size: 1.25em;
+    font-size: 1.2em;
     margin-top: 0% 0%;
   }
   .headerlinks{
@@ -87,8 +86,7 @@ body{
     display: none;
   }
 h1 {
-    font-size: 3em;
-    text-decoration: underline;
+    font-size: 2.25em;
     text-align: center;
     animation: swooshDownAndEnlarge 1s ease-in-out forwards;
     transform-origin: top;
@@ -149,8 +147,7 @@ h1 {
 
 @media all and (max-width: 885px) {
     h1{
-        font-size: 2em;
-        text-decoration: underline;
+        font-size: 1.7em;
     }
     .reviewsection {
         width: 100vw;
@@ -195,7 +192,6 @@ h1 {
 @media all and (max-width: 500px) {
     h1 {
         font-size: 1.85em;
-        text-decoration: underline;
         text-align: center;
         animation: swooshDownAndEnlarge 1s ease-in-out forwards;
         transform-origin: top;
@@ -255,12 +251,8 @@ h1 {
 }
 @media all and (max-width: 445px) {
     h1 {
-        text-decoration: underline;
-        width: 100%;
-        font-size: 117.5%;
-        padding: 0% 2.5%;
+        font-size: 1.4em;
         text-align: center;
-        margin-bottom: 10%;
         animation: swooshDownAndEnlarge 1s ease-in-out forwards;
         transform-origin: top;
         opacity: 0;
@@ -269,11 +261,11 @@ h1 {
       @keyframes swooshDownAndEnlarge {
         0% {
           opacity: 0;
-          transform: translateY(-50%) scale(0.5);
+          transform: translateY(-50%) scale(0.8);
         }
         100% {
           opacity: 1;
-          transform: translateY(17.5px) scale(1.2);
+          transform: translateY(15px) scale(1.3);
         }
     
     }
@@ -284,12 +276,15 @@ h1 {
         .dropdown {
         position: relative;
         display: inline-block;
+        z-index: 999;
+        
         }
         
         .dropdown-toggle {
         text-decoration: none;
         color: #1f2937;
         padding: 5px;
+        z-index: 999;
         }
         
         .dropdown-menu {
@@ -297,13 +292,15 @@ h1 {
         text-align: end;
         position: absolute;
         top: 100%;
-        width: 8em;
+        width: 7.5em;
         right: 0;
         display: none;
         background-color:#1f2937;
+        opacity: 95%;
         padding: 10px;
         list-style: none;
         margin: 0;
+        z-index: 999;
         }
         
         .dropdown-menu li {
@@ -313,25 +310,31 @@ h1 {
         text-decoration: none;
         flex-wrap: nowrap;
         margin-bottom: 10px;
+        z-index: 999;
         }
         
         .dropdown:hover .dropdown-menu {
         display: block;
+        z-index: 999;
         }
     
 }
 
 footer {
     display: flex;
-    width: 100%;
     background-color: #1f2937;
     color: #e5e7eb;
     justify-content: center;
     align-items: center;
-    padding: 0.5%;
     text-align: center;
-    font-size: 0.75em;
+    font-size: 0.8em;
+    margin: 0;
+    width: 100%;
+    position:fixed;
+    bottom: 0;
+    left: 0;
   }
+  
   
   @media all and (max-width: 825px) {
     footer {
