--- a/style.css
+++ b/style.css
@@ -390,6 +390,7 @@ html,body
     right: 0;
     display: none;
     background-color:#1f2937;
+    opacity: 95%;
     padding: 10px;
     list-style: none;
     margin: 0;
